--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -133,16 +133,22 @@
  			  <input type="text" class="form-control" id="be_date1" name="be_date1" readonly="readonly" style="cursor:pointer;background-color:#ffffff"></input>
             </div>
             <div class="form-group col-lg-4">
-              <label>城市</label>
+              <label><span class="text-red" title="勾选频道：以城市为单位统计&#13;未勾选城市：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>城市<span class="checkboxFive">
+                <input type='checkbox' id="cityClick" onclick='operatedCoverageCity()' checked="checked" value='city'>
+                <label for="cityClick"></label>
+                </span></label>
 			  <input id="city_id_tradetype" name="city_id_tradetype" type="hidden" value=""/>
-			  <input type="text" class="form-control"  placeholder="城市" id="city_name_tradetype" style="display: inherit;width: 90%;border-radius: 6px;"/>
+			  <input type="text" class="form-control"  placeholder="城市" id="city_name_tradetype" style="display: inherit;width: 90%;border-radius: 6px;" disabled="true"/>
               <div class="auto hidden" id="auto_city" style="width:82%;z-index: 99999;">
               </div>
             </div>
             <div class="form-group col-lg-4">
-              <label>门店</label>
+              <label><span class="text-red" title="勾选频道：以门店为单位统计&#13;未勾选门店：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>门店<span class="checkboxFive">
+                <input type='checkbox' id="storeClick" onclick='operatedCoverageStore()' checked="checked" value='store'>
+                <label for="storeClick"></label>
+                </span></label>
 			  <input id="store_id_tradetype" name="store_id_tradetype" type="hidden" value=""/>
-			  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px;width: 90%"/>
+			  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px;width: 90%" disabled="true"/>
               <div class="auto hidden" id="auto_store" style="width:82%;z-index: 99999;">
               </div>
             </div>
@@ -154,8 +160,8 @@
             </div>
             <div class="form-group col-lg-4">
                 <label><span class="text-red" title="勾选频道：以频道为单位统计&#13;未勾选频道：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>频道<span class="checkboxFive">
-                <input type='checkbox' id="storeClickDaypay" onclick='operatedCoverageDaypay()' checked="checked" value='area'>
-                <label for="storeClickDaypay"></label>
+                <input type='checkbox' id="channelClick" onclick='operatedCoverageChannel()' checked="checked" value='area'>
+                <label for="channelClick"></label>
                 </span></label>
                 <input type="text" class="form-control"  placeholder="频道" id="channel_name" style="border-radius: 6px;width: 90%" disabled="true"/>
             </div>
@@ -180,15 +186,14 @@
                   <table class="table table-striped">
                     <tbody id="tradeType_tbody">
 	                    <tr>
-	                      <th width="8%">城市</th>
-	                      <th width="10%">门店名称</th>
-	                      <th width="10%">门店编号</th>
+	                      <th width="8%" id="citynamepayhide">城市</th>
+	                      <th width="10%" id="storenamepayhide">门店名称</th>
+	                      <th width="10%" id="storenopayhide">门店编号</th>
                           <th width="10%">事业群</th>
                           <th width="10%" id="channelnamepayhide">频道</th>
 	                      <th width="10%">销售收入<br/>（非优易）</th>
-                          <th width="12%">营销费用<br/>（非优易）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
-                          <th width="12%">营销费用<br/>（优易）</th>
+                          <th width="12%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">总销售收入</font>毛利</th>
 	                    </tr>
@@ -300,16 +305,42 @@
     });
 
     var searchChannelStr = "dept_active";
-    if($('#storeClickDaypay').is(':checked')){
+    if($('#channelClick').is(':checked')){
         searchChannelStr = "channel_active";
         $("#channelnamepayhide").show();
     }else{
         searchChannelStr = "dept_active";
         $("#channelnamepayhide").hide();
     }
-
-    $('#storeClickDaypay').removeAttr('checked')
+    $('#channelClick').removeAttr('checked')
     $("#channelnamepayhide").hide();
+
+    var searchDeptCityStr = "dept_city_active";
+    if($('#cityClick').is(':checked')){
+        searchDeptCityStr = "dept_city_active";
+        $("#citynamepayhide").show();
+    }else{
+        searchDeptCityStr = "dept_city_active";
+        $("#citynamepayhide").hide();
+    }
+    $('#cityClick').removeAttr('checked')
+    $("#citynamepayhide").hide();
+
+
+    var searchDeptStoreStr = "dept_store_active";
+    if($('#storeClick').is(':checked')){
+        searchDeptStoreStr = "dept_store_active";
+        $("#storenamepayhide").show();
+        $("#storenopayhide").show();
+    }else{
+        searchDeptStoreStr = "dept_store_active";
+        $("#storenamepayhide").hide();
+        $("#storenopayhide").hide();
+    }
+    $('#storeClick').removeAttr('checked')
+    $("#storenamepayhide").hide();
+    $("#storenopayhide").hide();
+
   });
 	
 
@@ -506,13 +537,31 @@
 	  		  		target:target
 	  			}
 	    }
-        if($('#storeClickDaypay').is(':checked')){
-            dynamicDto["searchstr"] = "channel_active";
-            $("#channelnamepayhide").show();
+        var searchstrTemp = "dept_active";
+        if($('#channelClick').is(':checked') || $('#cityClick').is(':checked') || $('#storeClick').is(':checked')){
+            if($('#channelClick').is(':checked')){
+                dynamicDto["searchstr"] = "channel_active";
+                $("#channelnamepayhide").show();
+            }
+
+            if($('#cityClick').is(':checked')){
+                dynamicDto["searchstr"] = "dept_city_active";
+                $("#citynamepayhide").show();
+            }
+
+            if($('#storeClick').is(':checked')){
+                dynamicDto["searchstr"] = "dept_store_active";
+                $("#storenamepayhide").show();
+                $("#storenopayhide").show();
+            }
         }else{
-            dynamicDto["searchstr"] = "dept_active";
             $("#channelnamepayhide").hide();
+            $("#citynamepayhide").hide();
+            $("#storenamepayhide").hide();
+            $("#storenopayhide").hide();
         }
+        dynamicDto["searchstr"] = searchstrTemp;
+
         $("#tradeType_tbody").find("tr:gt(0)").remove();
  	    var pageInfo = new Object();
  	    pageInfo.currentPage = cur_page;
@@ -550,20 +599,24 @@
 	        	   
 	        	   var infoStr="";
 	        	   for(var i=0;i<jData.length;i++){
-	        		   infoStr= "<tr>"
-		                       +"<td>"+jData[i].city_name+"</td>"
-		                       +"<td>"+jData[i].store_name+"</td>"
-		                       +"<td>"+jData[i].store_code+"</td>"
-                               +"<td>"+jData[i].department_name+"</td>";
-                               if($('#storeClickDaypay').is(':checked')){
-                                   infoStr= infoStr +"<td>"+jData[i].channel_name+"</td>";
-                               }
-		                       infoStr = infoStr+"<td>"+jData[i].platform_profit+"</td>"
-                               +"<td>"+jData[i].platform_fee+"</td>"
-                               +"<td>"+jData[i].ims_profit+"</td>"
-                               +"<td>"+jData[i].ims_fee+"</td>"
-                               +"<td>"+jData[i].total_profit+"</td>"
-		                       +"</tr>";
+	        		   infoStr= "<tr>";
+                           if($('#channelClick').is(':checked')){
+                               infoStr= infoStr +"<td>"+jData[i].city_name+"</td>";
+                           }
+                           if($('#storeClick').is(':checked')){
+                               infoStr= infoStr +"<td>"+jData[i].store_name+"</td>";
+                               infoStr= infoStr +"<td>"+jData[i].store_code+"</td>";
+                           }
+                       infoStr= infoStr
+                           +"<td>"+jData[i].department_name+"</td>";
+                           if($('#channelClick').is(':checked')){
+                               infoStr= infoStr +"<td>"+jData[i].channel_name+"</td>";
+                           }
+                           infoStr = infoStr+"<td>"+jData[i].platform_profit+"</td>"
+                           +"<td>"+jData[i].ims_profit+"</td>"
+                           +"<td>"+jData[i].order_fee+"</td>"
+                           +"<td>"+jData[i].total_profit+"</td>"
+                           +"</tr>";
 		                       
 		                  $("#tradeType_tbody").append(infoStr);     
 	        	   }
@@ -675,7 +728,7 @@
            }
        }
 
-        if($('#storeClickDaypay').is(':checked')){
+        if($('#channelClick').is(':checked')){
             dynamicDto["searchstr"] = "channel_active";
             $("#channelnamepayhide").show();
         }else{
@@ -707,12 +760,36 @@
       }); 
     }
 
-function operatedCoverageDaypay(){
-    if($('#storeClickDaypay').is(':checked')){
+function operatedCoverageChannel(){
+    if($('#channelClick').is(':checked')){
         $("#channel_name").attr("disabled",false);
     }else{
         $("#channel_name").attr("disabled",true);
         $("#channel_name").val("");
+    }
+}
+
+function operatedCoverageCity(){
+    if($('#cityClick').is(':checked')){
+        $("#city_name_tradetype").attr("disabled",false);
+        $("#auto_city").empty();
+    }else{
+        $("#city_name_tradetype").attr("disabled",true);
+        $("#city_id_tradetype").val("");
+        $("#city_name_tradetype").val("");
+        $("#city_store").empty();
+    }
+}
+
+function operatedCoverageStore(){
+    if($('#storeClick').is(':checked')){
+        $("#store_name_tradetype").attr("disabled",false);
+        $("#auto_store").empty();
+    }else{
+        $("#store_name_tradetype").attr("disabled",true);
+        $("#store_id_tradetype").val("");
+        $("#store_name_tradetype").val("");
+        $("#auto_store").empty();
     }
 }
 
