--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -170,12 +170,11 @@
 	                      <th width="8%">城市</th>
 	                      <th width="10%">门店名称</th>
 	                      <th width="10%">门店编号</th>
-	                      <th width="10%">销售收入<br/>（非优易）</th>
-                          <th width="12%">营销费用<br/>（非优易）</th>
+	                      <th width="10%">销售收入<br/>（平台）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
-                          <th width="12%">营销费用<br/>（优易）</th>
+                          <th width="12%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                              <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">总销售收入</font>毛利</th>
+                              <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">销售收入-营销费用-报损-盘亏</font>毛利</th>
 	                    </tr>
                     </tbody>
                   </table>
@@ -490,9 +489,8 @@
 		                       +"<td>"+jData[i].store_name+"</td>"
 		                       +"<td>"+jData[i].store_code+"</td>"
 		                       +"<td>"+jData[i].platform_profit+"</td>"
-                               +"<td>"+jData[i].platform_fee+"</td>"
                                +"<td>"+jData[i].ims_profit+"</td>"
-                               +"<td>"+jData[i].ims_fee+"</td>"
+                               +"<td>"+jData[i].order_fee+"</td>"
                                +"<td>"+jData[i].total_profit+"</td>"
 		                       +"</tr>";
 		                       
