--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -104,25 +104,25 @@
                                     </dl>
                                     <dl class="pull-left">
                                         <dt style="text-align:center"><i></i>绩效数据</dt>
-                                        <dd class="col-sm-6"><a href="javascript:goToStoretrade()"><span class="fa fa-line-chart"></span>门店GMV</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:goToNewaddcus()"><span class="fa fa-area-chart"></span>门店用户</a></dd>
-                                        <!--<dd class="col-sm-4" style="position:relative"><a href="javascript:goToStoreprofit()"><span class="fa fa-dollar"></span>门店毛利</a>-->
-                                            <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
-                                        <dd class="col-sm-6"><a href="javascript:goToAreaGMVToSend()"><span class="fa fa-pie-chart"></span>国安侠GMV</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:goToNewAddCustomerGMVToSend()"><span class="fa fa-bar-chart"></span>国安侠用户</a></dd>
-                                        <!--<dd class="col-sm-4 logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-eur"></span>国安侠毛利</a></dd>-->
-                                        <dd class="col-sm-6"><a href="javascript:goToDeptGMV()"><span class="fa fa-book"></span>事业群GMV</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:goToDeptConsumer()"><span class="fa fa-female"></span>事业群用户</a></dd>
-                                        <!--<dd class="col-sm-4" style="position:relative"><a href="javascript:goToDeptprofit();"><span class="fa fa-gbp"></span>事业群毛利</a>-->
-                                            <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
-                                        <dd class="col-sm-6"><a href="javascript:goToSendOrders()"><span class="fa fa-calendar-check-o"></span>国安侠送单量</a></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToStoretrade()"><span class="fa fa-line-chart"></span>门店GMV</a></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToNewaddcus()"><span class="fa fa-area-chart"></span>门店用户</a></dd>
+                                        <dd class="col-sm-4" style="position:relative"><a href="javascript:goToStoreprofit()"><span class="fa fa-dollar"></span>门店毛利</a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToAreaGMVToSend()"><span class="fa fa-pie-chart"></span>国安侠GMV</a></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToNewAddCustomerGMVToSend()"><span class="fa fa-bar-chart"></span>国安侠用户</a></dd>
+                                        <dd class="col-sm-4 logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-eur"></span>国安侠毛利</a></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToDeptGMV()"><span class="fa fa-book"></span>事业群GMV</a></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToDeptConsumer()"><span class="fa fa-female"></span>事业群用户</a></dd>
+                                        <dd class="col-sm-4" style="position:relative"><a href="javascript:goToDeptprofit();"><span class="fa fa-gbp"></span>事业群毛利</a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
+                                        <dd class="col-sm-4"><a href="javascript:goToSendOrders()"><span class="fa fa-calendar-check-o"></span>国安侠送单量</a></dd>
                                         <!--<dd class="col-sm-6"><a href="javascript:goToRewardtimes()"><span class="fa fa-thumbs-o-up"></span>国安侠好评次数</a></dd>-->
-                                        <dd class="col-sm-6"><a href="javascript:goToMemberInvitation()"><span class="fa fa-credit-card"></span>社员邀请统计</a>
+                                        <dd class="col-sm-4"><a href="javascript:goToMemberInvitation()"><span class="fa fa-credit-card"></span>社员邀请统计</a>
                                             <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                        <dd class="col-sm-6" id="221_gmv" style="display: none"><a href="javascript:goTo221GMV()"><span class="fa fa-cny"></span>221GMV</a>
+                                        <dd class="col-sm-4" id="221_gmv" style="display: none"><a href="javascript:goTo221GMV()"><span class="fa fa-cny"></span>221GMV</a>
                                             <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                        <!--<dd class="col-sm-4" style="position:relative"><a href="javascript:goToCityprofit();"><span class="fa fa-rmb"></span>城市毛利</a>-->
-                                            <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
+                                        <dd class="col-sm-4" style="position:relative"><a href="javascript:goToCityprofit();"><span class="fa fa-rmb"></span>城市毛利</a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>运营数据</dt>
