--- a/WebContent/crm/userOperationStat_view.html
+++ b/WebContent/crm/userOperationStat_view.html
@@ -4189,7 +4189,7 @@ function operatedCoverageDayNewcus(){
         $("#store_name_manual_daynewcus").attr("disabled",true);
         $("#store_id_manual_daynewcus").val("");
         $("#store_name_manual_daynewcus").val("");
-        $("#a$(\"#tradeType_tbody\").find(\"tr:gt(0)\").remove(); uto_daynewcus").empty();
+        $("#auto_daynewcus").empty();
     }
 }
 
