--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -89,6 +89,7 @@
                                     <dl class="pull-left">
                                         <dt style="text-align:center"><i></i>档案数据</dt>
                                         <!--<dd class="col-sm-6"><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>-->
+                                        <dd class="col-sm-6 logo-prohibit"><a href="javascript:js_alert_temporary()"><span class="fa fa-file-o"></span>订单档案</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
