--- a/WebContent/crm/data_files.html
+++ b/WebContent/crm/data_files.html
@@ -231,10 +231,10 @@
 						<div class="ui-datepicker-css" id="ui-datepicker-css" style="margin:0 15px 0 0;">	
 						    <div class="ui-datepicker-quick" id="ui-datepicker-quick">
 						        <input class="ui-date-quick-button" type="button" value="今天" alt="0"  name=""/>
-						        <input class="ui-date-quick-button" type="button" value="昨天" alt="-1" name=""/>
+						        <!--<input class="ui-date-quick-button" type="button" value="昨天" alt="-1" name=""/>-->
 						        <input class="ui-date-quick-button" type="button" value="7天内" alt="-6" name=""/>
-						        <!--<input class="ui-date-quick-button" type="button" value="30天内" alt="-29" name=""/>
-						        <input class="ui-date-quick-button" type="button" value="60天内" alt="-59" name=""/>-->
+						        <input class="ui-date-quick-button" type="button" value="30天内" alt="-29" name=""/>
+								<!--<input class="ui-date-quick-button" type="button" value="60天内" alt="-59" name=""/>-->
 						        <input class="ui-date-quick-button" type="button" value="全部" alt="2" name="">
 						        <span class="ui-close-date" id="ui-close-date" style="cursor:pointer;">X</span>
 						    </div>
@@ -1629,13 +1629,14 @@ function resetSerachParam(){
   	  }else if(target==2){//店长
   		
   	  }
-	var nowDate = new Date();
-	var month = nowDate.getMonth()+1;
-    var date = nowDate.getDate();
-    timeStr = nowDate.getFullYear() + '/' + (month < 10 ? '0' + month : '' + month) + '/' + (date < 10 ? '0' + date : '' + date);
-    nowDate.setDate(nowDate.getDate()+parseInt(-1));
-    var startDateStr = nowDate.getFullYear() + '/' + (month < 10 ? '0' + month : '' + month) + '/01'; 
-	$("#searchTime").val(startDateStr +"-"+ timeStr);
+    var nowDate = new Date();
+    nowDate.setDate(nowDate.getDate()-1);
+    var mdate = nowDate.format('yyyy/MM/dd');
+    //$.setStartTime();
+    $("#searchTime").val(mdate +"-"+ mdate);
+    $("#startOpenCardDate").val(mdate);
+    $("#endOpenCardDate").val(mdate);
+
 	$("#data_choice").html("默认时期");
     var a = document.getElementById("user_source");
     $('#storeClick').prop('checked',true);
