划片公有小区颜色标识

--- a/WebContent/slice/area_edit_map.html
+++ b/WebContent/slice/area_edit_map.html
@@ -227,7 +227,7 @@
 	   				   </div>
 	   			    </li>
 					<li class="col-lg-12" >
-						<div class="col-sm-3 no-padding" style="width:10%;background:#ECD012"></div>
+						<div class="col-sm-3 no-padding" style="width:10%;background:#8b0fe8"></div>
 						<div class="col-sm-9 no-padding" >
 							<p style="padding-left:10px;white-space:nowrap;"><span style="white-space:nowrap;display:inline-block">可划片(非当前门店录入小区)</span></p>
 						</div>
@@ -554,8 +554,8 @@
     var $strokeColor_cur = "#55f12f";//当前片区管辖小区
     var $fillColor_cur = "#55f12f"; //当前片区管辖小区
     var $fillColor_sel = "#ec612c";//临时选中小区
-	var $fillColorPublic = "#ECD012";//公共小区
-	var $strokeColorPublic = "#ECD012"
+	var $fillColorPublic = "#8b0fe8";//公共小区
+	var $strokeColorPublic = "#8b0fe8"
 
     var infoWindow1;
 	function initArea(storeService,coordinate) {
